--- a/Personal profile/index.html
+++ b/Personal profile/index.html
@@ -477,8 +477,8 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/saifislamfci/Lara-Shopping.git">Work 01</a></h3>
-										<span>Website</span>
+										<h1><a href="https://github.com/saifislamfci/Lara-Shopping.git">Work 01</a></h1>
+										<span>Application</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -492,8 +492,8 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-2.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/saifislamfci/School-Management-System.git">Work 02</a></h3>
-										<span>Animation</span>
+										<h1><a href="https://github.com/saifislamfci/School-Management-System.git">Work 02</a></h1>
+										<span>Application</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -507,8 +507,8 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-3.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/saifislamfci/Blog.git">Work 03</a></h3>
-										<span>Illustration</span>
+										<h1><a href="https://github.com/saifislamfci/Blog.git">Work 03</a></h1>
+										<span>website</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
@@ -522,7 +522,7 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-4.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/saifislamfci/Ecommerce.git">Work 04</a></h3>
+										<h1><a href="https://github.com/saifislamfci/Ecommerce.git">Work 04</a></h1>
 										<span>Application</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
