--- a/Personal profile/index.html
+++ b/Personal profile/index.html
@@ -477,7 +477,7 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h1 style="color:white;font-size: 15px;"><a href="https://github.com/saifislamfci/Lara-Shopping.git">Work 01</a></h1>
+										<h1 style="color:red; font-size:30px;"><a href="https://github.com/saifislamfci/Lara-Shopping.git">Work 01</a></h1>
 										<span>Application</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
