--- a/Personal profile/index.html
+++ b/Personal profile/index.html
@@ -507,7 +507,7 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-3.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/saifislamfci/Blog.git">Work 03</a></h3>
+										<a href="https://github.com/saifislamfci/Blog.git"><h1>Work 03</h1></a>
 										<span>website</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
