--- a/Personal profile/index.html
+++ b/Personal profile/index.html
@@ -480,9 +480,9 @@ particularly attractive to me.</p>
 										<h3><a href="https://github.com/saifislamfci/Lara-Shopping.git">Work 01</a></h3>
 										<span>Application</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://github.com/saifislamfci/Lara-Shopping.git"><i class="icon-share3"></i></a></span>
+											<span><a href="https://github.com/saifislamfci/Lara-Shopping.git"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://github.com/saifislamfci/Lara-Shopping.git"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -495,9 +495,9 @@ particularly attractive to me.</p>
 										<h3><a href="https://github.com/saifislamfci/School-Management-System.git">Work 02</a></h3>
 										<span>Application</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://github.com/saifislamfci/School-Management-System.git"><i class="icon-share3"></i></a></span>
+											<span><a href="https://github.com/saifislamfci/School-Management-System.git"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://github.com/saifislamfci/School-Management-System.git"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -507,12 +507,12 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-3.jpg);">
 								<div class="desc">
 									<div class="con">
-										<a href="https://github.com/saifislamfci/Blog.git"><h1>Work 03</h1></a>
+										<h1><a href="https://github.com/saifislamfci/Blog.git">Work 03</a></h1>
 										<span>website</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://github.com/saifislamfci/Blog.git"><i class="icon-share3"></i></a></span>
+											<span><a href="https://github.com/saifislamfci/Blog.git"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://github.com/saifislamfci/Blog.git"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -525,9 +525,9 @@ particularly attractive to me.</p>
 										<h3><a href="https://github.com/saifislamfci/Ecommerce.git">Work 04</a></h3>
 										<span>Application</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://github.com/saifislamfci/Ecommerce.git"><i class="icon-share3"></i></a></span>
+											<span><a href="https://github.com/saifislamfci/Ecommerce.git"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://github.com/saifislamfci/Ecommerce.git"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
