--- a/Personal profile/index.html
+++ b/Personal profile/index.html
@@ -469,7 +469,7 @@ particularly attractive to me.</p>
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#">Apps</a></span></p>
+							<p class="work-menu"><span><a href="#" >Graphic Design</a></span> <span><a href="#">Web Design</a></span> <span><a href="#">Software</a></span> <span><a href="#" class="active">Apps</a></span></p>
 						</div>
 					</div>
 					<div class="row">
