--- a/Personal profile/index.html
+++ b/Personal profile/index.html
@@ -477,12 +477,12 @@ particularly attractive to me.</p>
 							<div class="project" style="background-image: url(assets/images/img-1.jpg);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="https://github.com/saifislamfci/Lara-Shopping.git">Work 01</a></h3>
+										<h3><a href="https://khondakerllc.com/">Work 01</a></h3>
 										<span>Application</span>
 										<p class="icon">
-											<span><a href="https://github.com/saifislamfci/Lara-Shopping.git"><i class="icon-share3"></i></a></span>
-											<span><a href="https://github.com/saifislamfci/Lara-Shopping.git"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="https://github.com/saifislamfci/Lara-Shopping.git"><i class="icon-heart"></i> 49</a></span>
+											<span><a href="https://khondakerllc.com/"><i class="icon-share3"></i></a></span>
+											<span><a href="https://khondakerllc.com/"><i class="icon-eye"></i> 100</a></span>
+											<span><a href="https://khondakerllc.com/"><i class="icon-heart"></i> 49</a></span>
 										</p>
 									</div>
 								</div>
@@ -556,7 +556,7 @@ particularly attractive to me.</p>
 									<i class="icon-globe-outline"></i>
 								</div>
 								<div class="sayed-text">
-									<p><a href="mailto:abusayed285235@gmail.com">Saifislamfci@gmail.com</a></p>
+									<p><a href="mailto:saifislamfci@gmail.com">Saifislamfci@gmail.com</a></p>
 								</div>
 							</div>
 
